# realtimeText

./: .eslintrc.json  .gitignore  CLAUDE.md  README.md  dashboard.html  package-lock.json  package.json  spec.md  subtitle.html  tsconfig.json  vite.config.ts  基于 Tauri v2 与阶跃星辰的实时字幕工具开发架构.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
specs/: volc-asr-plan.md  volc-streaming-plan.md
specs/001-realtime-subtitle-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-realtime-subtitle-tool/checklists/: requirements.md
specs/001-realtime-subtitle-tool/contracts/: commands.md  ipc-events.md  sse-protocol.md  ws-protocol.md
specs/002-android-port/: design.md  plan.md  research.md
spike-ort-android/: Cargo.toml
spike-ort-android/src/: main.rs
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: config.rs  events.rs  lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/asr/: client.rs  mod.rs  pipeline.rs  protocol.rs  provider.rs  volc.rs
src-tauri/src/audio/: capture.rs  dsp.rs  jni.rs  mod.rs  ring.rs
src-tauri/src/commands/: config.rs  mod.rs  search.rs  session.rs
src-tauri/src/db/: pool.rs  repository.rs
src-tauri/src/vad/: mod.rs  silero.rs  state.rs
src/composables/: useAppearance.ts  useAsrStatus.ts  useSubtitle.ts
src/lib/: tauri.ts
src/stores/: settings.ts
src/windows/dashboard/: App.vue  main.ts
src/windows/dashboard/views/: History.vue  Settings.vue
src/windows/subtitle/: App.vue  style.css
