[package]
name = "realtime-subtitle-tool"
version = "0.1.0"
description = "Windows 实时字幕工具"
authors = ["you"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "realtime_subtitle_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-log = "2.0"
cpal = "0.15"
rubato = "0.15"
rtrb = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
include_dir = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
futures-util = "0.3"
parking_lot = "0.12"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
